# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python-ci.yml
gendiff/: __init__.py  build_diff.py  cli.py  generate_diff.py  parser.py
gendiff/formatters/: format_router.py  make_str.py  plain.py  stylish.py  to_json.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: expected.json
