[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "compares two configs and makes changes"
authors = ["Vadim Berezhnoy <gpopperony@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "gendiff" },
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
repository = "https://github.com/popperony/python-project-50"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
